# proyectox

./: .env  .gitignore  README.md  main.py  pyproject.toml
config/: variables.yaml
notebooks/: scrap_book.ipynb
src/proyectox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stats/: graphs.py
